[tool.poetry]
name = "berrydeck"
version = "1.0.0"
description = "Web interface for creating & editing Celeste savefiles."
authors = ["frissyn"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
Flask = "^2.2.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"